@@ -4,7 +4,9 @@ Changelog
 4.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Set our properties on install, also when kupu is not available.  Fix
+  the zcml condition for loading kupu.zcml.
+  [maurits]
 
 
 4.1 (2014-03-20)
